feat: refactor paging format
Adapt the paging format.
